--- a/molo/usermetadata/templates/persona.html
+++ b/molo/usermetadata/templates/persona.html
@@ -2,18 +2,23 @@
 {% load wagtailimages_tags i18n %}
 
 {% block content %}
-<div>
-    <ul>
+<div class="personae">
+    <h3 class="personae__title">Are you a ...</h3>
+    <ul class="personae-list">
         {% for persona in persona_pages %}
-          <li>
-            {% if persona.image %}
-              {% image persona.image width-75 as tmp_photo %}
-              <img src="{{ tmp_photo.url }}" alt="{{ persona.image.title }}"/>
-            {% endif %}
-            <a href="{% url 'molo.usermetadata:set_persona' persona.id %}?next={{ next }}">{{ persona.title }}</a>
+          <li class="personae-list__item">
+              {% if persona.image %}
+                {% image persona.image width-65 as tmp_photo %} 
+                <img src="{{ tmp_photo.url }}" alt="{{ persona.image.title }}" class="personae-icon" />
+              {% endif %}
+            <a href="{% url 'molo.usermetadata:set_persona' persona.id %}?next={{ next }}">
+              <span class="personae-nav">{{ persona.title }}</span>
+            </a>
           </li>
         {% endfor %}
     </ul>
-    <a href="{% url 'molo.usermetadata:skip_persona'%}?next={{ next }}">{% trans "Skip" %}</a>
+    <a href="{% url 'molo.usermetadata:skip_persona'%}?next={{ next }}" class="personae-skip">{% trans "Skip" %}</a>
 </div>
 {% endblock %}
+
+
