--- a/molo/usermetadata/templates/persona.html
+++ b/molo/usermetadata/templates/persona.html
@@ -8,10 +8,11 @@
         {% for persona in persona_pages %}
           <li class="personae-list__item">
             <a href="{% url 'molo.usermetadata:set_persona' persona.id %}?next={{ next }}" class="personae__title">
-              {% if persona.image %}
+              <div class="personae-list__item--image-container">{% if persona.image %}
                 {% image persona.image width-65 as tmp_photo %} 
-                <img src="{{ tmp_photo.url }}" alt="{{ persona.image.title }}" class="personae__image" />
-              {% endif %}
+                  <img src="{{ tmp_photo.url }}" alt="{{ persona.image.title }}" class="personae__image" />
+                {% endif %}
+              </div>
               {{ persona.title }}
             </a>
           </li>
@@ -19,6 +20,18 @@
     </ul>
     <a href="{% url 'molo.usermetadata:skip_persona'%}?next={{ next }}" class="personae__skip">{% trans "Skip" %}</a>
 </div>
+{% block section_menu %}
+{% endblock %}
+
+{% block search %}
+{% endblock %}
+
+{% block footer %}
+  <div class="copyright">
+    <p>&copy; The Internet of Good Things</p>
+  </div>
+{% endblock %}
+
 {% endblock %}
 
 
