--- a/molo/usermetadata/templates/persona.html
+++ b/molo/usermetadata/templates/persona.html
@@ -7,9 +7,9 @@
     <ul class="personae-list">
         {% for persona in persona_pages %}
           <li class="personae-list__item">
-            <a href="{% url 'molo.usermetadata:set_persona' persona.id %}?next={{ next }}" class="personae__title">
+            <a href="{% url 'molo.usermetadata:set_persona' persona.slug %}?next={{ next }}" class="personae__title">
               <div class="personae-list__item--image-container">{% if persona.image %}
-                {% image persona.image width-65 as tmp_photo %} 
+                {% image persona.image width-65 as tmp_photo %}
                   <img src="{{ tmp_photo.url }}" alt="{{ persona.image.title }}" class="personae__image" />
                 {% endif %}
               </div>
@@ -32,7 +32,3 @@
     <p>&copy; The Internet of Good Things</p>
   </div>
 {% endblock %}
-
-
-
-
